--- a/test.ini
+++ b/test.ini
@@ -5,7 +5,7 @@ Add-Type -TypeDefinition $csCode -Language CSharp
 # 실행할 페이로드 (NOP + RET)
 $payload = [byte[]] (0x90, 0x90, 0xC3)
 
-# SentinelOne 프로세스 찾기
+#  프로세스 찾기
 $proc = Get-Process | Where-Object { $_.ProcessName -eq "test" }
 $pid = $proc.Id
 
